--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -205,6 +205,7 @@ padding: 0;
     text-decoration: underline; 
     text-underline-position: under;
     text-decoration-color: white;
+    padding-top: 50px;
 }
 
 /*ICONS*/
@@ -446,7 +447,12 @@ padding: 0;
  width: 100px;
 height: 40px;
 margin-bottom: 50px;
+box-shadow: 0 1px 1px rgba(0,0,0,0.08), 
+                0 2px 2px rgba(0,0,0,0.12), 
+                0 4px 4px rgba(0,0,0,0.16), 
+                0 8px 8px rgba(0,0,0,0.20);
 }
+
 
 /*INFORMATION*/
 
@@ -593,6 +599,11 @@ color: #B40202;}
 
 @media screen and (max-height: 586px) and (min-width: 771px) {
 #harriet {
-    padding-top: 0;
+    padding: 0;
+    font-size: 100px;
+}
+
+#darley {
+    font-size: 100px;
 }
 }
