--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -81,6 +81,7 @@ ul.nav a:hover {
   align-items: center; 
   padding-top: 20px;
   padding-bottom: 20px; 
+  justify-content: center;
 }
 
 #harriet {
