--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -1,4 +1,4 @@
-/*FONTS*/
+/*FONTS https://www.dafontfree.io https://www.cufonfonts.com */
 @font-face {
     font-family: 'sinthyaregular';
     src: url('../fonts/sinthya-webfont.woff2') format('woff2'),
@@ -29,10 +29,9 @@
          url('../fonts/freesansbold-webfont.woff') format('woff');
     font-weight: normal;
     font-style: normal;
-
 }
 
-    /*NAVIGATION BAR*/
+/*NAVIGATION BAR*/
 .navigation-container {
     display: flex;
     justify-content: center;
@@ -81,7 +80,6 @@ ul {
 }
 
 /*HOMEPAGE HEADINGS*/
-
 .title-container {
      display: flex;
   text-align: center;
@@ -113,9 +111,7 @@ font-family: 'yessicaregular' ;
      text-shadow: 15px 10px 10px darkslategrey; 
 }
     
-
 /*HOMEPAGE BACKGROUND*/
-
 header {
     background-image: url("../images/background.abstract.jpg");
     height: 100vh;
@@ -126,7 +122,6 @@ header {
 }
 
 /*ABOUTUS*/
-
 .about-us-container {
     background-color: #EDEDED;
 }
@@ -193,7 +188,6 @@ padding: 0;
 }
 
 /*SKILLS*/
-
 .skills-container {
     margin: 0 30px;
 }
@@ -217,7 +211,6 @@ padding: 0;
 }
 
 /*ICONS*/
-
 #skillsicons {
     display: flex;
     justify-content: center;
@@ -235,22 +228,18 @@ padding: 0;
     border-radius: 100%;
 }
 
-
 #css-icon {
     padding-top: 13px;
 }
-
 
 #java-icon {
     padding-top: 13px;
     border-radius: 100%;
 }
 
-
 #boot-icon {
     padding-top: 13px;
 }
-
 
 .icons {
     vertical-align: top;
@@ -323,7 +312,6 @@ line-height: 100px;
 }
 
 /*BOTH EXPERIENCE & EDUCATION*/
-
 .primarydescription {
     background-color: #BFC9CB;  
     text-align: center;
@@ -348,9 +336,7 @@ line-height: 100px;
     color: #707070;
 }
 
-
 /*EDUCATION*/
-
 .education-container {
     background-color: #EDEDED;
 }
@@ -358,7 +344,6 @@ line-height: 100px;
 #educationtitlerow {
 margin-bottom: 10px;
 }
-
 
 #coursesdiv {
     text-align: center;
@@ -404,7 +389,6 @@ color: white;
 line-height: 100px;
 font-size: 30px;
 }
-
 
 /*FORMS*/
 .contact-container {
@@ -461,9 +445,7 @@ box-shadow: 0 1px 1px rgba(0,0,0,0.08),
                 0 8px 8px rgba(0,0,0,0.20);
 }
 
-
 /*INFORMATION*/
-
 #harrietdetails {
     padding: 0;
     background-color: #BFC9CB;
@@ -485,7 +467,6 @@ box-shadow: 0 1px 1px rgba(0,0,0,0.08),
 }
 
 /*ICONS*/
-
 #media {
     text-align: center;
 }
@@ -534,7 +515,6 @@ color: #B40202;}
 
 /* MEDIA QUERIES */
 @media screen and (max-width: 768px) {
-
 .ml2 {
     font-size: 50px;
     padding: 0;
@@ -618,7 +598,6 @@ color: #B40202;}
     font-size: 10px;
 }
 }
-
 
 @media screen and (max-width: 340px) {
 #harriet {
